[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/InvItem/inventory-panel.png" type="Texture" id=1]
[ext_resource path="res://ui/InvItem/InvItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/InventoryPicker/InventoryPicker.gd" type="Script" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 42, 42 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="InventoryPicker" type="CanvasLayer"]
layer = 10
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )

[node name="ColorRect2" type="ColorRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.0
margin_top = -101.0
margin_right = 167.0
margin_bottom = 113.0
color = Color( 0.105882, 0.137255, 0.156863, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Control/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ColorRect2/MarginContainer"]
margin_right = 313.0
margin_bottom = 194.0
custom_constants/separation = 20

[node name="TopRow" type="GridContainer" parent="Control/ColorRect2/MarginContainer/VBoxContainer"]
margin_right = 313.0
margin_bottom = 32.0
columns = 6

[node name="Weapon" parent="Control/ColorRect2/MarginContainer/VBoxContainer/TopRow" instance=ExtResource( 2 )]
custom_styles/panel = SubResource( 1 )
ONLY_WEAPON = true

[node name="Space" type="Panel" parent="Control/ColorRect2/MarginContainer/VBoxContainer/TopRow"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 2 )

[node name="Stored" type="GridContainer" parent="Control/ColorRect2/MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 313.0
margin_bottom = 52.0
columns = 6

[connection signal="gui_input" from="Control/ColorRect" to="." method="_on_ColorRect_gui_input"]
